updated 3rd question answer

--- a/Tk1 Task1.2
+++ b/Tk1 Task1.2
@@ -24,3 +24,17 @@ There are many process communicate each other and topology issues.
 The implementation of language, platform and lifecycle
 
 
+
+
+Task 1.3: Transparency (1 P.)
+Define the term "transparency". Furthermore, name and describe four real world examples of different types of transparency.
+
+Transparency is concealment from the user and the application programmer of the separation of individual components in a distributed system, so that the systems perceive as a whole, rather than as a collection of independent components.
+Four real world examples of different types of transparency are:
+1. Location Transparency: The user is unaware about the physical and network location of the resources.Eg: A facebook user is unaware about the location of the resource locations.
+
+2. Access Transparency: Local and remote resources to be accessed using identical operations.Eg: Accessing a file from local file system and cloud file system.
+
+3. Concurrency Transparency: Enables several processes to operate concurrently using shared resources without interference. E.g.: A distributed printing service must provide the same atomic access per file as a central system so that printout is not randomly interleaved.
+
+4.Replication Transparency: enables multiple instances of resources to be use to increase reliability and performance. E.g.: Mirroring of websites and distributed Databases.
