--- a/Tk1 Task1.2
+++ b/Tk1 Task1.2
@@ -38,3 +38,12 @@ Four real world examples of different types of transparency are:
 3. Concurrency Transparency: Enables several processes to operate concurrently using shared resources without interference. E.g.: A distributed printing service must provide the same atomic access per file as a central system so that printout is not randomly interleaved.
 
 4.Replication Transparency: enables multiple instances of resources to be use to increase reliability and performance. E.g.: Mirroring of websites and distributed Databases.
+
+
+Task 1.4: “Programming” Abstractions (4 P.)
+Describe the four principles of programming abstractions wrt. Distributed software
+development.
+
+The four principles are:
+
+1. Distributed Operating System Approach: The Operating system produces a single system image for all the resources in a distributed system.
